# LLGM

./: .gitignore  LICENSE  README.md  lama_2_classification_finetune_test.ipynb  pyproject.toml  requirements.txt
data/: problems_100.csv
deepseek-scripts/: deepseek_download.py  deepseek_finetune_test.py  deepseek_params.py  modal_setup.py  requirements.txt
llgm.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: base_deepseek_setup.ipynb  cf-api.ipynb  deepseek_finetune_classification.ipynb  gpt-benchmark.ipynb  lama-2-classification-finetune-test.ipynb  lama_2_classification_finetune_test.ipynb  quantized-deepseek_classification_finetune_test.ipynb
