# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "llgm"
description = "LL(grand)M"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]


[tool.ruff]
target-version = "py311"
extend-include = ["*.ipynb"]

# Line length 80 to makes it easier to have multiple files open side-by-side.
line-length = 80

# Ignore F722 for jaxtyping compatibility
ignore = ["F722", "E731"]

[tool.ruff.lint.isort]
# wandb is a package, but sometimes also a folder that gets created.
# We tell ruff to treat it always as a third-party package to make import
# sorting consistent.
known-third-party = ["wandb"]
